# hevc_player

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json  player.js  sei_parser.js  sei_parser.wasm  style.css  vite.config.js
.github/workflows/: deploy.yml
public/: sei_parser.js  sei_parser.wasm
src/: main.rs  player.js  style.css
src/controls/: videoControls.js  zoom-pan.css  zoom-pan.html  zoomPanController.js
src/demux/: mp4Demuxer.js
src/parsers/: metadataParser.js  seiParser.js
src/utils/: codecDetection.js  formatters.js  nalConverter.js
wasm/: bindings.cpp  build.sh  sei_parser.cpp  sei_parser.hpp
